# my-soc-ops-python

./: README.md  WORKSPACE_INSTRUCTIONS.md  copilot-instructions.md  pyproject.toml
app/: game_logic.py  game_service.py  main.py  models.py  old_west_config.py
app/static/css/: app.css
app/templates/components/: bingo_board.html  bingo_modal.html  card_deck.html  game_screen.html  scavenger_list.html  start_screen.html
docs/: design-spec.md
tests/: test_api.py  test_card_deck.py  test_scavenger_api.py  test_scavenger_mode.py
workshop/: tech-life-bingo.md
